syntax = "proto3";


package calculator;
option java_package = "io.protocol.grpc10";
option java_multiple_files = true;

message SqrtRequest{
  double number = 1;
}

message SqrtResponse{
  double value = 1;
}
